--- a/Proto/style.css
+++ b/Proto/style.css
@@ -1,55 +1,49 @@
 #App {
   margin: 0;
   padding: 0;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 12.5vw 87.5vw;
+  grid-template-rows: 6vh 5vh 89vh;
+  grid-template-areas:
+    "nav header"
+    "nav categories"
+    "nav videos";
 }
 
 #Header {
-  height: 10vh;
+  grid-area: header;
 }
 
-#Content {
-  height: 90vh;
-  display: flex;
-}
-
-#NavBar {
-  width: 20vw;
-}
-
-#right-content {
-  width: 80vw;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-#Categories {
-  height: 10%;
+#Nav {
+  grid-area: nav;
 }
 
 #VideoCanvas {
-  height: 90%;
+  grid-area: videos;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-#video-wrapper {
-  width: 80%;
+.Row {
+  width: 90%;
+  height: 335px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
-/* #Video { */
-/*  */
-/* } */
+#first-row {
+  margin-top: 25px;
+}
 
-#Video > video {
-  background-color: #548252;
+video {
+  width: 100%;
+  height: 62%;
 }
 
 .test-border {
-  border: 2px solid #000;
+  border: 1px solid #000;
   padding: 2px;
 }
